# confckurator/src/api/model/UpdateTemplate.ts
@@ -1,0 +1,21 @@
+/**
+ * Confckurator
+ * Confckurator Client/Server API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import * as models from './models';
+
+export interface UpdateTemplate {
+    /**
+     * Template text.
+     */
+    text: string;
+
+}
